--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0599.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0599.html
@@ -166,20 +166,19 @@
             <ins class="alt" title="nlp 2.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_28" class="ocr_word" title="bbox 1462 402 1484 438">
+        <span id="w_28_0" class="ocr_word" title="bbox 1462 402 1484 438">
           <span class="alternatives">
-            <ins title="nlp 2.00">#x772;</ins>
+            <ins class="alt" title="nlp 2.00">γ&amp;#x772;</ins>
+          </span>
+        </span>
+        <span id="w_28_1" class="ocr_word" title="bbox 1462 402 1484 438">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_29" class="ocr_word" title="bbox 1525 387 1708 440" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">σχήματα</ins>
-          </span>
-        </span>
-        <span id="w_30" class="ocr_word" title="bbox 1754 386 1900 429">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">incerti</ins>
-            <del title="nlp 0.90">incerti</del>
           </span>
         </span>
       </span>
@@ -220,9 +219,14 @@
             <del title="nlp 0.90">esse</del>
           </span>
         </span>
-        <span id="w_37" class="ocr_word" title="bbox 1035 464 1293 505">
+        <span id="w_37_0" class="ocr_word" title="bbox 1035 464 1293 505">
           <span class="alternatives">
-            <ins title="nlp 2.00">Αmmouius.</ins>
+            <ins class="alt" title="nlp 2.00">Ammonius.</ins>
+          </span>
+        </span>
+        <span id="w_37_1" class="ocr_word" title="bbox 1035 464 1293 505">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_38" class="ocr_word" title="bbox 1343 469 1428 505">
@@ -244,11 +248,6 @@
         <span id="w_41" class="ocr_word" title="bbox 1618 464 1788 506">
           <span class="alternatives">
             <ins title="nlp 2.00">Scholia</ins>
-          </span>
-        </span>
-        <span id="w_42" class="ocr_word" title="bbox 1815 467 1901 508">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Stephani</ins>
           </span>
         </span>
       </span>
@@ -278,8 +277,7 @@
         </span>
         <span id="w_48" class="ocr_word" title="bbox 986 542 1141 584">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">delude</ins>
-            <del title="nlp 0.90">delude</del>
+            <ins title="nlp 2.00">deinde</ins>
           </span>
         </span>
         <span id="w_49" class="ocr_word" title="bbox 1171 542 1197 584">
@@ -308,19 +306,19 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_55" class="ocr_word" title="bbox 1654 561 1678 584">
+        <span id="w_55_0" class="ocr_word" title="bbox 1654 561 1678 584">
           <span class="alternatives">
-            <ins title="nlp 2.00">#x772;</ins>
+            <ins class="alt" title="nlp 2.00">ᾱ</ins>
+          </span>
+        </span>
+        <span id="w_55_1" class="ocr_word" title="bbox 1654 561 1678 584">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_56" class="ocr_word" title="bbox 1710 561 1784 585" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῶν</ins>
-          </span>
-        </span>
-        <span id="w_57" class="ocr_word" title="bbox 1816 561 1901 599" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">προτέπων</ins>
           </span>
         </span>
       </span>
@@ -450,8 +448,7 @@
       <span class="ocr_line" title="bbox 101 779 1903 834">
         <span id="w_84" class="ocr_word" title="bbox 262 780 584 833">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">commeutaria,</ins>
-            <del title="nlp 0.90">commeutaria,</del>
+            <ins title="nlp 2.00">commentaria,</ins>
           </span>
         </span>
         <span id="w_85" class="ocr_word" title="bbox 622 792 732 832">
@@ -502,17 +499,7 @@
         </span>
         <span id="w_93" class="ocr_word" title="bbox 1646 782 1724 823">
           <span class="alternatives">
-            <ins title="nlp 2.00">88r</ins>
-          </span>
-        </span>
-        <span id="w_94" class="ocr_word" title="bbox 1733 808 1788 812">
-          <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
-        <span id="w_95" class="ocr_word" title="bbox 1800 784 1903 824">
-          <span class="alternatives">
-            <ins title="nlp 2.00">112r</ins>
+            <ins title="nlp 2.00">88r—112r</ins>
           </span>
         </span>
       </span>
@@ -611,8 +598,7 @@
         </span>
         <span id="w_112" class="ocr_word" title="bbox 885 938 1063 980">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">aduotat</ins>
-            <del title="nlp 0.90">aduotat</del>
+            <ins title="nlp 2.00">adnotat</ins>
           </span>
         </span>
         <span id="w_113" class="ocr_word" title="bbox 1097 943 1201 994" lang="grc">
@@ -726,12 +712,7 @@
       <span class="ocr_line" title="bbox 102 1096 1903 1155">
         <span id="w_133" class="ocr_word" title="bbox 102 1123 154 1127">
           <span class="alternatives">
-            <ins title="nlp 2.00">—</ins>
-          </span>
-        </span>
-        <span id="w_134" class="ocr_word" title="bbox 166 1099 271 1139">
-          <span class="alternatives">
-            <ins title="nlp 2.00">155v</ins>
+            <ins title="nlp 2.00">—155v</ins>
           </span>
         </span>
         <span id="w_135" class="ocr_word" title="bbox 302 1110 387 1138">
@@ -773,15 +754,14 @@
             <del title="nlp 0.90">f.</del>
           </span>
         </span>
-        <span id="w_144" class="ocr_word" title="bbox 1554 1099 1744 1155">
+        <span id="w_144_0" class="ocr_word" title="bbox 1554 1099 1744 1155">
           <span class="alternatives">
-            <ins title="nlp 2.00">Xv—XXXIv] </ins>
+            <ins class="alt" title="nlp 2.00">Xv—XXXIv]</ins>
           </span>
         </span>
-        <span id="w_145" class="ocr_word" title="bbox 1776 1106 1903 1155">
+        <span id="w_144_1" class="ocr_word" title="bbox 1554 1099 1744 1155">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">atque</ins>
-            <del title="nlp 0.90">atque</del>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -964,9 +944,14 @@
             <del title="nlp 0.90">f.</del>
           </span>
         </span>
-        <span id="w_180" class="ocr_word" title="bbox 351 1416 457 1457">
+        <span id="w_180_0" class="ocr_word" title="bbox 351 1416 457 1457">
           <span class="alternatives">
-            <ins title="nlp 2.00">202v—208v</ins>
+            <ins class="alt" title="nlp 2.00">202v—208v</ins>
+          </span>
+        </span>
+        <span id="w_180_1" class="ocr_word" title="bbox 351 1416 457 1457">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_181" class="ocr_word" title="bbox 501 1415 653 1457">
@@ -988,8 +973,7 @@
         </span>
         <span id="w_184" class="ocr_word" title="bbox 1134 1416 1254 1456">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aual.</ins>
-            <del title="nlp 0.90">Aual.</del>
+            <ins title="nlp 2.00">Anal.</ins>
           </span>
         </span>
         <span id="w_185" class="ocr_word" title="bbox 1288 1415 1354 1455">
@@ -1014,11 +998,6 @@
             <del title="nlp 0.90">alterum</del>
           </span>
         </span>
-        <span id="w_189" class="ocr_word" title="bbox 1734 1425 1903 1473">
-          <span class="alternatives">
-            <ins title="nlp 2.00">tmema,</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 102 1494 1904 1542">
         <span id="w_190" class="ocr_word" title="bbox 102 1499 129 1542">
@@ -1027,9 +1006,14 @@
             <del title="nlp 0.90">f.</del>
           </span>
         </span>
-        <span id="w_191" class="ocr_word" title="bbox 153 1500 258 1541">
+        <span id="w_191_0" class="ocr_word" title="bbox 153 1500 258 1541">
           <span class="alternatives">
-            <ins title="nlp 2.00">209r—225v</ins>
+            <ins class="alt" title="nlp 2.00">209r—225v</ins>
+          </span>
+        </span>
+        <span id="w_191_1" class="ocr_word" title="bbox 153 1500 258 1541">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_194" class="ocr_word" title="bbox 454 1496 509 1536">
@@ -1050,9 +1034,14 @@
             <del title="nlp 0.90">f.</del>
           </span>
         </span>
-        <span id="w_197" class="ocr_word" title="bbox 803 1496 909 1537">
+        <span id="w_197_0" class="ocr_word" title="bbox 803 1496 909 1537">
           <span class="alternatives">
-            <ins title="nlp 2.00">226r—261v</ins>
+            <ins class="alt" title="nlp 2.00">226r—261v</ins>
+          </span>
+        </span>
+        <span id="w_197_1" class="ocr_word" title="bbox 803 1496 909 1537">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_200" class="ocr_word" title="bbox 1105 1494 1453 1537">
@@ -1065,17 +1054,6 @@
             <ins title="nlp 2.00">exhibet</ins>
           </span>
         </span>
-        <span id="w_202" class="ocr_word" title="bbox 1669 1497 1723 1539">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ad</ins>
-            <del title="nlp 0.90">ad</del>
-          </span>
-        </span>
-        <span id="w_203" class="ocr_word" title="bbox 1747 1499 1904 1541">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Aristotelis</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 102 1573 1903 1630">
         <span id="w_204" class="ocr_word" title="bbox 102 1580 198 1622">
@@ -1083,9 +1061,14 @@
             <ins title="nlp 2.00">c.</ins>
           </span>
         </span>
-        <span id="w_206" class="ocr_word" title="bbox 382 1577 447 1618">
+        <span id="w_206_0" class="ocr_word" title="bbox 382 1577 447 1618">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">8—26.</ins>
+          </span>
+        </span>
+        <span id="w_206_1" class="ocr_word" title="bbox 382 1577 447 1618">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_207" class="ocr_word" title="bbox 494 1575 574 1616">
@@ -1127,12 +1110,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">mos</ins>
             <del title="nlp 0.90">mos</del>
-          </span>
-        </span>
-        <span id="w_214" class="ocr_word" title="bbox 1711 1576 1903 1619">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">diversus</ins>
-            <del title="nlp 0.90">diversus</del>
           </span>
         </span>
       </span>
@@ -1345,9 +1322,14 @@
             <ins class="alt" title="nlp 1.00">μοι</ins>
           </span>
         </span>
-        <span id="w_251" class="ocr_word" title="bbox 762 1909 1047 1949" lang="grc">
+        <span id="w_251_0" class="ocr_word" title="bbox 762 1909 1047 1949">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐξηγνσάμενος</ins>
+            <ins class="alt" title="nlp 2.00">ἐξηγησάμενος</ins>
+          </span>
+        </span>
+        <span id="w_251_1" class="ocr_word" title="bbox 762 1909 1047 1949">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_252" class="ocr_word" title="bbox 1073 1894 1280 1949" lang="grc">
@@ -1364,12 +1346,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">quae</ins>
             <del title="nlp 0.90">quae</del>
-          </span>
-        </span>
-        <span id="w_255" class="ocr_word" title="bbox 1719 1894 1902 1948">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">suspicio</ins>
-            <del title="nlp 0.90">suspicio</del>
           </span>
         </span>
       </span>
@@ -1595,12 +1571,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 104 2287 1904 2347">
-        <span id="w_297" class="ocr_word" title="bbox 104 2294 201 2347">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">gaui</ins>
-            <del title="nlp 0.90">Orgaui</del>
-          </span>
-        </span>
         <span id="w_298" class="ocr_word" title="bbox 235 2295 251 2335" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">Ι</ins>
@@ -1698,8 +1668,7 @@
         </span>
         <span id="w_315" class="ocr_word" title="bbox 1473 2367 1778 2420">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Gottiugensis.</ins>
-            <del title="nlp 0.90">Gottiugensis.</del>
+            <ins title="nlp 2.00">Gottingensis.</ins>
           </span>
         </span>
         <span id="w_316" class="ocr_word" title="bbox 1840 2371 1904 2412">
@@ -1760,8 +1729,7 @@
         </span>
         <span id="w_325" class="ocr_word" title="bbox 1511 2446 1668 2488">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">uuciali</ins>
-            <del title="nlp 0.90">uuciali</del>
+            <ins title="nlp 2.00">unciali</ins>
           </span>
         </span>
         <span id="w_326" class="ocr_word" title="bbox 1697 2448 1906 2501">
@@ -2194,9 +2162,14 @@
             <del title="nlp 0.90">a</del>
           </span>
         </span>
-        <span id="w_401" class="ocr_word" title="bbox 309 3019 327 3056" lang="grc">
+        <span id="w_401_0" class="ocr_word" title="bbox 309 3019 327 3056">
           <span class="alternatives">
-            <ins title="nlp 2.00">ρ&amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">ρ&amp;#x772;</ins>
+          </span>
+        </span>
+        <span id="w_401_1" class="ocr_word" title="bbox 309 3019 327 3056">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_402" class="ocr_word" title="bbox 359 3007 611 3061">
@@ -2228,20 +2201,14 @@
             <del title="nlp 0.90">carent.</del>
           </span>
         </span>
-        <span id="w_407" class="ocr_word" title="bbox 1365 3018 1383 3042" lang="grc">
+        <span id="w_407_0" class="ocr_word" title="bbox 1365 3018 1383 3042">
           <span class="alternatives">
-            <ins title="nlp 2.00">v&amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">v&amp;#x772;</ins>
           </span>
         </span>
-        <span id="w_408" class="ocr_word" title="bbox 1415 3003 1683 3056" lang="grc">
+        <span id="w_407_1" class="ocr_word" title="bbox 1365 3018 1383 3042">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐφελκυστικόν</ins>
-          </span>
-        </span>
-        <span id="w_409" class="ocr_word" title="bbox 1713 3001 1904 3043">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">abundat</ins>
-            <del title="nlp 0.90">abundat</del>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
