--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0540.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0540.html
@@ -362,7 +362,7 @@
         </span>
         <span id="w_68" class="ocr_word" title="bbox 465 720 544 762">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">0,10</ins>
+            <ins title="nlp 2.00">9,10</ins>
           </span>
         </span>
         <span id="w_69" class="ocr_word" title="bbox 599 708 700 751">
@@ -518,7 +518,7 @@
         </span>
         <span id="w_98" class="ocr_word" title="bbox 1376 956 1499 1010" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὕτω</ins>
+            <ins title="nlp 2.00">(οὕτω</ins>
           </span>
         </span>
         <span id="w_99" class="ocr_word" title="bbox 1537 957 1609 1011" lang="grc">
