--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0683.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0683.html
@@ -69,9 +69,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 156 1258 1023 1305">
-        <span id="w_10" class="ocr_word" title="bbox 156 1260 379 1303" lang="grc">
+        <span id="w_10_0" class="ocr_word" title="bbox 156 1260 379 1303">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀδιάφορος·44,5.6</ins>
+            <ins class="alt" title="nlp 2.00">ἀδιάφορος</ins>
+          </span>
+        </span>
+        <span id="w_10_1" class="ocr_word" title="bbox 156 1260 379 1303">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">44,5.6</ins>
           </span>
         </span>
         <span id="w_11" class="ocr_word" title="bbox 572 1258 758 1305" lang="grc">
@@ -231,11 +236,6 @@
         <span id="w_39" class="ocr_word" title="bbox 226 1607 329 1642">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">26.27</ins>
-          </span>
-        </span>
-        <span id="w_40" class="ocr_word" title="bbox 397 1633 401 1638">
-          <span class="alternatives">
-            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
       </span>
@@ -474,10 +474,14 @@
             <ins class="alt" title="nlp 1.00">40,</ins>
           </span>
         </span>
-        <span id="w_84" class="ocr_word" title="bbox 687 2188 811 2232">
+        <span id="w_84_0" class="ocr_word" title="bbox 687 2188 811 2232">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lOsqq.</ins>
-            <del title="nlp 0.90">lOsqq.</del>
+            <ins class="alt" title="nlp 2.00">10</ins>
+          </span>
+        </span>
+        <span id="w_84_1" class="ocr_word" title="bbox 687 2188 811 2232">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">sqq.</ins>
           </span>
         </span>
         <span id="w_85" class="ocr_word" title="bbox 838 2187 943 2229">
@@ -505,14 +509,24 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 157 2305 678 2351">
-        <span id="w_89" class="ocr_word" title="bbox 157 2319 206 2339" lang="grc">
+        <span id="w_89_0" class="ocr_word" title="bbox 157 2319 206 2339">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἄκρος.</ins>
+            <ins class="alt" title="nlp 2.00">ἄκρος.</ins>
           </span>
         </span>
-        <span id="w_90" class="ocr_word" title="bbox 343 2318 380 2339" lang="grc">
+        <span id="w_89_1" class="ocr_word" title="bbox 157 2319 206 2339">
           <span class="alternatives">
-            <ins title="nlp 2.00">τὸἄκρον65,2sq.</ins>
+            <ins class="alt" title="nlp 2.00">τὸ</ins>
+          </span>
+        </span>
+        <span id="w_90_0" class="ocr_word" title="bbox 343 2318 380 2339">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἄκρον</ins>
+          </span>
+        </span>
+        <span id="w_90_1" class="ocr_word" title="bbox 343 2318 380 2339">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">65,2sq.</ins>
           </span>
         </span>
       </span>
@@ -571,9 +585,9 @@
             <ins class="alt" title="nlp 1.00">32,6</ins>
           </span>
         </span>
-        <span id="w_101" class="ocr_word" title="bbox 863 2477 1029 2521">
+        <span id="w_101_0" class="ocr_word" title="bbox 863 2477 1029 2521">
           <span class="alternatives">
-            <ins title="nlp 2.00">33,3sqq-</ins>
+            <ins class="alt" title="nlp 2.00">33,3sqq·</ins>
           </span>
         </span>
       </span>
@@ -797,20 +811,17 @@
       <span class="ocr_line" title="bbox 160 3114 1030 3159">
         <span id="w_141" class="ocr_word" title="bbox 160 3115 215 3149">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’v.</ins>
-            <del title="nlp 0.90">’v.</del>
+            <ins title="nlp 2.00">ἄν.</ins>
           </span>
         </span>
         <span id="w_142" class="ocr_word" title="bbox 266 3129 315 3158">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">otv,</ins>
-            <del title="nlp 0.90">otv,</del>
+            <ins title="nlp 2.00">ἄν,</ins>
           </span>
         </span>
         <span id="w_143" class="ocr_word" title="bbox 341 3117 395 3150">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">idv</ins>
-            <del title="nlp 0.90">idv</del>
+            <ins title="nlp 2.00">ἐάν</ins>
           </span>
         </span>
         <span id="w_144" class="ocr_word" title="bbox 427 3128 454 3150">
@@ -904,20 +915,17 @@
         </span>
         <span id="w_159" class="ocr_word" title="bbox 510 3246 603 3269">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">XVUI</ins>
-            <del title="nlp 0.90">XVUI</del>
+            <ins title="nlp 2.00">ΧVIII</ins>
           </span>
         </span>
         <span id="w_160" class="ocr_word" title="bbox 618 3243 643 3269">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">H.</ins>
-            <del title="nlp 0.90">H.</del>
+            <ins title="nlp 2.00">3.</ins>
           </span>
         </span>
         <span id="w_161" class="ocr_word" title="bbox 665 3246 757 3278">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Stepli.</ins>
-            <del title="nlp 0.90">Stepli.</del>
+            <ins title="nlp 2.00">Steph.</ins>
           </span>
         </span>
         <span id="w_162" class="ocr_word" title="bbox 780 3246 812 3269">
@@ -979,8 +987,7 @@
         </span>
         <span id="w_172" class="ocr_word" title="bbox 1352 1203 1390 1236">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’v</ins>
-            <del title="nlp 0.90">’v</del>
+            <ins title="nlp 2.00">ἄν</ins>
           </span>
         </span>
         <span id="w_173" class="ocr_word" title="bbox 1416 1214 1445 1236">
@@ -1249,16 +1256,26 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1096 1896 1557 1941">
-        <span id="w_220" class="ocr_word" title="bbox 1096 1896 1423 1941" lang="grc">
+        <span id="w_220_0" class="ocr_word" title="bbox 1096 1896 1423 1941">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀνακεφαλαιοῦν53,15</ins>
+            <ins class="alt" title="nlp 2.00">ἀνακεφαλαιοῦν</ins>
+          </span>
+        </span>
+        <span id="w_220_1" class="ocr_word" title="bbox 1096 1896 1423 1941">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">53,15</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 1096 1954 1422 1999">
-        <span id="w_221" class="ocr_word" title="bbox 1096 1954 1307 1999" lang="grc">
+        <span id="w_221_0" class="ocr_word" title="bbox 1096 1954 1307 1999">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀναλογεῖν7,10</ins>
+            <ins class="alt" title="nlp 2.00">ἀναλογεῖν</ins>
+          </span>
+        </span>
+        <span id="w_221_1" class="ocr_word" title="bbox 1096 1954 1307 1999">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">7,10</ins>
           </span>
         </span>
       </span>
@@ -1343,9 +1360,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1098 2301 1514 2349">
-        <span id="w_236" class="ocr_word" title="bbox 1098 2305 1277 2349" lang="grc">
+        <span id="w_236_0" class="ocr_word" title="bbox 1098 2305 1277 2349">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀναφορά67,6.11.25</ins>
+            <ins class="alt" title="nlp 2.00">ἀναφορά</ins>
+          </span>
+        </span>
+        <span id="w_236_1" class="ocr_word" title="bbox 1098 2305 1277 2349">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">67,6.11.25</ins>
           </span>
         </span>
       </span>
@@ -1416,9 +1438,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1098 2533 1592 2580">
-        <span id="w_249" class="ocr_word" title="bbox 1098 2537 1399 2580" lang="grc">
+        <span id="w_249_0" class="ocr_word" title="bbox 1098 2537 1399 2580">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀνομοιομερής4,17sqq.</ins>
+            <ins class="alt" title="nlp 2.00">ἀνμοιομερής</ins>
+          </span>
+        </span>
+        <span id="w_249_1" class="ocr_word" title="bbox 1098 2537 1399 2580">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">4,17sqq.</ins>
           </span>
         </span>
       </span>
@@ -1452,14 +1479,14 @@
             <ins class="alt" title="nlp 1.00">ἀντιδιαιρεῖν.</ins>
           </span>
         </span>
-        <span id="w_255" class="ocr_word" title="bbox 1429 2707 1681 2753" lang="grc">
+        <span id="w_255_0" class="ocr_word" title="bbox 1429 2707 1681 2753">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀντιδῃένα </ins>
+            <ins class="alt" title="nlp 2.00">ἀντιδιῃρημένα</ins>
           </span>
         </span>
-        <span id="w_256" class="ocr_word" title="bbox 1710 2704 1832 2746">
+        <span id="w_255_1" class="ocr_word" title="bbox 1429 2707 1681 2753">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">17,5.6</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
