--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0541.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0541.html
@@ -1582,7 +1582,7 @@
         </span>
         <span id="w_292" class="ocr_word" title="bbox 1574 2993 1624 3024" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">11. 12 τὸν ὁρ. καὶ</ins>
+            <ins title="nlp 2.00">τὸν ὁρ. καὶ</ins>
           </span>
         </span>
       </span>
