--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0625.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0625.html
@@ -1543,7 +1543,7 @@
         </span>
         <span id="w_304" class="ocr_word" title="bbox 196 1856 272 1910" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δὲ]</ins>
+            <ins title="nlp 2.00">[δε]</ins>
           </span>
         </span>
         <span id="w_305" class="ocr_word" title="bbox 305 1872 378 1896" lang="grc">
@@ -2044,9 +2044,14 @@
             <ins class="alt" title="nlp 2.00">λέξιν,</ins>
           </span>
         </span>
-        <span id="w_403_1" class="ocr_word" title="bbox 196 2472 306 2518">
+        <span id="w_403_1_0" class="ocr_word" title="bbox 196 2472 306 2518">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ζ&amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">ς&amp;#x772;</ins>
+          </span>
+        </span>
+        <span id="w_403_1_1" class="ocr_word" title="bbox 196 2472 306 2518">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_404" class="ocr_word" title="bbox 393 2485 435 2510" lang="grc">
@@ -2087,11 +2092,6 @@
         <span id="w_411" class="ocr_word" title="bbox 1316 2465 1438 2503" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πάντα</ins>
-          </span>
-        </span>
-        <span id="w_412" class="ocr_word" title="bbox 1468 2460 1842 2516" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">παραφυλάττεσθαι,</ins>
           </span>
         </span>
       </span>
@@ -2424,8 +2424,7 @@
       <span class="ocr_line" title="bbox 126 3016 1913 3074">
         <span id="w_478" class="ocr_word" title="bbox 126 3030 308 3065">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">utrobiuue</ins>
-            <del title="nlp 0.90">utrobiuue</del>
+            <ins title="nlp 2.00">utrobidue</ins>
           </span>
         </span>
         <span id="w_479" class="ocr_word" title="bbox 333 3030 473 3073">
@@ -2576,20 +2575,10 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_506" class="ocr_word" title="bbox 181 3144 244 3178">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">165</ins>
-          </span>
-        </span>
         <span id="w_507" class="ocr_word" title="bbox 254 3148 270 3171">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">b</ins>
+            <ins class="alt" title="nlp 2.00">165b24</ins>
             <del title="nlp 0.90">b</del>
-          </span>
-        </span>
-        <span id="w_508" class="ocr_word" title="bbox 279 3145 323 3178">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">24</ins>
           </span>
         </span>
         <span id="w_509" class="ocr_word" title="bbox 343 3144 406 3178">
