--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0543.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0543.html
@@ -67,9 +67,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 370 209 1330 263">
-        <span id="w_10" class="ocr_word" title="bbox 370 226 420 251">
+        <span id="w_10_0" class="ocr_word" title="bbox 370 226 420 251">
           <span class="alternatives">
-            <ins title="nlp 2.00">(??)</ins>
+            <ins class="alt" title="nlp 2.00">ῶν</ins>
+          </span>
+        </span>
+        <span id="w_10_1" class="ocr_word" title="bbox 370 226 420 251">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_11" class="ocr_word" title="bbox 482 225 626 250" lang="grc">
@@ -100,11 +105,6 @@
         <span id="w_16" class="ocr_word" title="bbox 1100 224 1142 248" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_17" class="ocr_word" title="bbox 1175 224 1330 263" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διαιρεῖν</ins>
           </span>
         </span>
       </span>
@@ -461,9 +461,14 @@
             <ins title="nlp 2.00">εἴδει</ins>
           </span>
         </span>
-        <span id="w_87" class="ocr_word" title="bbox 884 903 1170 956" lang="grc">
+        <span id="w_87_0" class="ocr_word" title="bbox 884 903 1170 956">
           <span class="alternatives">
-            <ins title="nlp 2.00">περιττεύουσιν</ins>
+            <ins class="alt" title="nlp 2.00">περιττεύουσιν</ins>
+          </span>
+        </span>
+        <span id="w_87_1" class="ocr_word" title="bbox 884 903 1170 956">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_88" class="ocr_word" title="bbox 1201 917 1240 941" lang="grc">
@@ -489,11 +494,6 @@
         <span id="w_92" class="ocr_word" title="bbox 1665 903 1718 939" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῷ</ins>
-          </span>
-        </span>
-        <span id="w_93" class="ocr_word" title="bbox 1758 913 1856 952" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γένει</ins>
           </span>
         </span>
       </span>
@@ -575,9 +575,14 @@
             <ins class="alt" title="nlp 1.00">εἴποις</ins>
           </span>
         </span>
-        <span id="w_109" class="ocr_word" title="bbox 403 1042 484 1084" lang="grc">
+        <span id="w_109_0" class="ocr_word" title="bbox 403 1042 484 1084">
           <span class="alternatives">
-            <ins title="nlp 2.00">῾ναὶ</ins>
+            <ins class="alt" title="nlp 2.00">ἔχει·</ins>
+          </span>
+        </span>
+        <span id="w_109_1" class="ocr_word" title="bbox 403 1042 484 1084">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_110" class="ocr_word" title="bbox 523 1058 625 1097" lang="grc">
@@ -620,16 +625,16 @@
             <ins class="alt" title="nlp 1.00">ἐστι</ins>
           </span>
         </span>
-        <span id="w_118" class="ocr_word" title="bbox 1813 1051 1855 1074" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 176 1103 1856 1165">
-        <span id="w_119" class="ocr_word" title="bbox 176 1113 310 1162" lang="grc">
+        <span id="w_119_0" class="ocr_word" title="bbox 176 1113 310 1162">
           <span class="alternatives">
-            <ins title="nlp 2.00">χῷον᾿</ins>
+            <ins class="alt" title="nlp 2.00">ζῷον᾿,</ins>
+          </span>
+        </span>
+        <span id="w_119_1" class="ocr_word" title="bbox 176 1113 310 1162">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_120" class="ocr_word" title="bbox 352 1116 450 1157" lang="grc">
@@ -685,11 +690,6 @@
         <span id="w_130" class="ocr_word" title="bbox 1657 1119 1710 1148" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὡς</ins>
-          </span>
-        </span>
-        <span id="w_131" class="ocr_word" title="bbox 1742 1103 1856 1147" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἶδος.</ins>
           </span>
         </span>
       </span>
