--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0626.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0626.html
@@ -299,10 +299,9 @@
             <ins class="alt" title="nlp 1.00">πρᾶξις.</ins>
           </span>
         </span>
-        <span id="w_57" class="ocr_word" title="bbox 2047 538 2065 562">
+        <span id="w_57_0" class="ocr_word" title="bbox 2047 538 2065 562">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">f.51ν</ins>
-            <del title="nlp 0.90">f.</del>
+            <ins class="alt" title="nlp 2.00">f.51v</ins>
           </span>
         </span>
       </span>
@@ -334,17 +333,7 @@
         </span>
         <span id="w_64" class="ocr_word" title="bbox 1243 761 1497 800" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τμήματος.</ins>
-          </span>
-        </span>
-        <span id="w_65" class="ocr_word" title="bbox 1543 743 1732 799">
-          <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;Πρᾶξις</ins>
-          </span>
-        </span>
-        <span id="w_66" class="ocr_word" title="bbox 1762 744 1804 798">
-          <span class="alternatives">
-            <ins title="nlp 2.00">α&amp;#x772;&amp;#x003E;</ins>
+            <ins title="nlp 2.00">τμήματος. &amp;#x003C;Πρᾶξις α&amp;#x772;&amp;x003E;</ins>
           </span>
         </span>
       </span>
@@ -731,7 +720,7 @@
         </span>
         <span id="w_140" class="ocr_word" title="bbox 747 1421 891 1475" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(κοινὸν</ins>
+            <ins title="nlp 2.00">κοινὸν</ins>
           </span>
         </span>
         <span id="w_141" class="ocr_word" title="bbox 938 1436 1008 1474" lang="grc">
@@ -1366,9 +1355,14 @@
             <ins class="alt" title="nlp 1.00">τούτων</ins>
           </span>
         </span>
-        <span id="w_266" class="ocr_word" title="bbox 661 2175 731 2230">
+        <span id="w_266_0" class="ocr_word" title="bbox 661 2175 731 2230">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;οἱ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;οἱ&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_266_1" class="ocr_word" title="bbox 661 2175 731 2230">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_267" class="ocr_word" title="bbox 753 2191 820 2230" lang="grc">
@@ -1404,11 +1398,6 @@
         <span id="w_273" class="ocr_word" title="bbox 1728 2187 1795 2226" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μὲν</ins>
-          </span>
-        </span>
-        <span id="w_274" class="ocr_word" title="bbox 1816 2184 2074 2212" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καταφατικὸς</ins>
           </span>
         </span>
       </span>
@@ -1519,14 +1508,12 @@
         </span>
         <span id="w_294" class="ocr_word" title="bbox 482 2381 547 2422">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’ou</ins>
-            <del title="nlp 0.90">’ou</del>
+            <ins title="nlp 2.00">῾οὐ</ins>
           </span>
         </span>
         <span id="w_295" class="ocr_word" title="bbox 578 2397 652 2425">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Tia?</ins>
-            <del title="nlp 0.90">Tia?</del>
+            <ins title="nlp 2.00">πᾶς</ins>
           </span>
         </span>
         <span id="w_296" class="ocr_word" title="bbox 680 2380 884 2434" lang="grc">
@@ -2087,8 +2074,7 @@
         </span>
         <span id="w_405" class="ocr_word" title="bbox 1143 3072 1274 3116">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Tlvsq.</ins>
-            <del title="nlp 0.90">Tlvsq.</del>
+            <ins title="nlp 2.00">71vsq.</ins>
           </span>
         </span>
         <span id="w_406" class="ocr_word" title="bbox 1440 3069 1483 3103">
