--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0237.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0237.html
@@ -73,7 +73,7 @@
         </span>
         <span id="w_11" class="ocr_word" title="bbox 1835 115 1912 155">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">I97</ins>
+            <ins title="nlp 2.00">197</ins>
           </span>
         </span>
       </span>
