--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0364.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0364.html
@@ -1298,9 +1298,14 @@
             <ins class="alt" title="nlp 1.00">ἀλλ’</ins>
           </span>
         </span>
-        <span id="w_251" class="ocr_word" title="bbox 2082 1866 2165 1902">
+        <span id="w_251_0" class="ocr_word" title="bbox 2082 1866 2165 1902">
           <span class="alternatives">
-            <ins title="nlp 2.00">130ν</ins>
+            <ins class="alt" title="nlp 2.00">130</ins>
+          </span>
+        </span>
+        <span id="w_251_1" class="ocr_word" title="bbox 2082 1866 2165 1902">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">v</ins>
           </span>
         </span>
       </span>
@@ -2002,9 +2007,9 @@
             <ins title="nlp 2.00">V</ins>
           </span>
         </span>
-        <span id="w_384" class="ocr_word" title="bbox 2066 2727 2178 2774" lang="grc">
+        <span id="w_384_0" class="ocr_word" title="bbox 2066 2727 2178 2774">
           <span class="alternatives">
-            <ins title="nlp 2.00">σοφία</ins>
+            <ins class="alt" title="nlp 2.00">σοφία]</ins>
           </span>
         </span>
       </span>
